<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawerLayout"
    android:background="@drawable/header_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/toolbar"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textColor="#BC294A"
            android:text="@string/new_comeback"
            android:layout_marginStart="40dp"/>
        <androidx.cardview.widget.CardView
            android:layout_marginTop="12dp"
            android:layout_width="335dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="20dp">
            <ImageView
                android:id="@+id/iv_newcb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/riize"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/riize_impossible"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="25dp"
                android:textSize="20sp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#BC294A"
            android:text="@string/recommended_for_you"
            android:layout_marginStart="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="15dp">
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/iv_aespa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/aespa"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/aespa"
                    android:textColor="@color/white"
                    android:layout_margin="15dp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/iv_dream"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dream"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/nct_dream"
                    android:textColor="@color/white"
                    android:layout_margin="15dp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp">
                <ImageView
                    android:id="@+id/iv_riize"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/riize"
                    android:scaleType="centerCrop"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/riize"
                    android:textColor="@color/white"
                    android:layout_margin="15dp"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="end">
        <include
            layout="@layout/nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>