<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@drawable/background_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:orientation="vertical"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/iv_close_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/baseline_close_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="25dp"
            android:paddingStart="30dp">

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BC294A"
                android:text="@string/home"
                android:textSize="20sp"
                android:drawablePadding="8dp"
                android:paddingVertical="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B36F7F"
                android:layout_marginEnd="25dp"/>

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BC294A"
                android:text="@string/artist"
                android:textSize="20sp"
                android:drawablePadding="8dp"
                android:paddingVertical="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B36F7F"
                android:layout_marginEnd="25dp"/>

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#BC294A"
                android:text="@string/company"
                android:textSize="20sp"
                android:drawablePadding="8dp"
                android:paddingVertical="15dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B36F7F"
                android:layout_marginEnd="25dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>